// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`youtube Invalid start time 1`] = `
"<article>
  <h1 class=\\"title\\">Youtube</h1>
  <section>
    <p><iframe width=\\"640\\" height=\\"360\\" src=\\"http://www.youtube.com/embed/YJ5q8Wrkbdw\\" start=\\"0\\" frameborder=\\"0\\"></iframe></p>
  </section>
</article>"
`;

exports[`youtube Short link youtube 1`] = `
"<article>
  <h1 class=\\"title\\">Youtube</h1>
  <section>
    <p><iframe width=\\"640\\" height=\\"360\\" src=\\"http://www.youtube.com/embed/YJ5q8Wrkbdw\\" start=\\"0\\" frameborder=\\"0\\"></iframe></p>
  </section>
</article>"
`;

exports[`youtube Short link youtube with start time 1`] = `
"<article>
  <h1 class=\\"title\\">Youtube</h1>
  <section>
    <p><iframe width=\\"640\\" height=\\"360\\" src=\\"http://www.youtube.com/embed/YJ5q8Wrkbdw\\" start=\\"5\\" frameborder=\\"0\\"></iframe></p>
    <p><iframe width=\\"640\\" height=\\"360\\" src=\\"http://www.youtube.com/embed/YJ5q8Wrkbdw\\" start=\\"60\\" frameborder=\\"0\\"></iframe></p>
  </section>
</article>"
`;

exports[`youtube Simple youtube 1`] = `
"<article>
  <h1 class=\\"title\\">Youtube</h1>
  <section>
    <p><iframe width=\\"640\\" height=\\"360\\" src=\\"http://www.youtube.com/embed/YJ5q8Wrkbdw\\" start=\\"0\\" frameborder=\\"0\\"></iframe></p>
  </section>
</article>"
`;

exports[`youtube Youtube with start time 1`] = `
"<article>
  <h1 class=\\"title\\">Youtube</h1>
  <section>
    <p><iframe width=\\"640\\" height=\\"360\\" src=\\"http://www.youtube.com/embed/YJ5q8Wrkbdw\\" start=\\"8\\" frameborder=\\"0\\"></iframe></p>
    <p><iframe width=\\"640\\" height=\\"360\\" src=\\"http://www.youtube.com/embed/YJ5q8Wrkbdw\\" start=\\"8\\" frameborder=\\"0\\"></iframe></p>
  </section>
</article>"
`;
